<resources>
    <string name="app_name">Kotlin Standard Application</string>
    <string name="app_description">This is my Kotlin standard application for learning by my own</string>
    <string name="all_rights_reserved">&#174; All rights reserved by Phong Kaster</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Tiếp tục</string>
    <string name="start">Bắt đầu</string>
    <string name="intro_title_1">Cấu hình như Tiktok Studio</string>
    <string name="intro_title_2">Live stream song song</string>
    <string name="intro_title_3">Nhiều chức năng cải tiến so với Tiktok Studio</string>
    <string name="intro_description_1">Với giao diện dễ dùng, đầy đủ như Tiktok Studio</string>
    <string name="intro_description_2">Hệ thống cung cấp tính năng cho bạn live song song, giảm thiểu vấn đề quét bản quyền</string>
    <string name="intro_description_3">Cung cấp tính năng cho bạn livestream từ video đã có, mà không cần dùng tiktok studio</string>
    <string name="username">Tên đăng nhập</string>
    <string name="login">Đăng nhập</string>
    <string name="or">Hoặc</string>
    <string name="image">image</string>
    <string name="default_email">phongkaster@gmail.com</string>
    <string name="snooze">Snooze</string>
    <string name="widget_activity">Widget activity</string>
    <string name="click">Click !</string>
    <string name="enter_your_word">Enter your word</string>
    <string name="save">Save</string>
    <string name="button">Button</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="nguyen_thanh_phong">Nguyễn Thành Phong</string>
    <string name="chart_bar">Chart Bar</string>
    <string name="chart_pie">Chart Pie</string>
    <string name="chart_radar">Chart Radar</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="japanese">Japanese</string>
    <string name="portugal">Portugal</string>
    <string name="korean">Korean</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="change_default_language_successfully">Change default language successfully</string>
    <string name="canvasContentDescription">Mini Paint is a simple line drawing app. Drag your fingers to draw. Rotate the phone to clear.</string>
    <string name="title_activity_data_binding">DataBindingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="this_is_a_line_chart">This is a line chart</string>
</resources>