<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
    </data>

        <LinearLayout
            android:background="@drawable/background_theme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:src="@drawable/ic_logo"
                android:layout_gravity="center"
                android:layout_marginTop="150dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/image" />

            <TextView
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/input_theme"
                android:drawablePadding="20dp"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingHorizontal="20dp"
                android:text="@string/default_email"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:autofillHints="emailAddress" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/input_theme"
                android:drawablePadding="20dp"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:text="@string/default_email"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:autofillHints="password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLogin"
                android:layout_width="247dp"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_marginVertical="29dp"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:background="@drawable/button_login"
                android:textColor="@color/white"
                android:text="@string/login"/>

            <TextView
                android:layout_gravity="center"
                android:text="@string/or"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/buttonLoginGoogle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_marginVertical="29dp"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:background="@drawable/button_login_google"
                android:src="@drawable/ic_logo_google"
                android:text="@string/login"/>

        </LinearLayout>
</layout>